fixed truncate

--- a/design.css
+++ b/design.css
@@ -68,12 +68,9 @@ body{
     border-bottom: 1px solid #eeeeee;
     margin: 0;
     padding: 10px 16px;
-
-
-    
-    
     
 }
+
 #task-list{
     padding: 0;
     margin: 0;
@@ -106,13 +103,6 @@ body{
     overflow: hidden;
     text-overflow: ellipsis;
 }**/
-
-.task-text{
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
 
 
 #overlay{
@@ -172,6 +162,24 @@ body{
     opacity: 0.6;
 }
 .complete{
+    cursor: pointer;
+}
+
+.text-content{
+    flex: 1;
+    min-width: 0;
+}
+
+.task-text{
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    min-width: 0;
+
+}
+
+.task-text.is-truncate{
     cursor: pointer;
 }
 
